# beman-task

./: .gitignore
tests/beman/task/: CMakeLists.txt  task.test.cpp
